<resources>
    <string name="app_name">Cake\'s Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="percent_sign">%</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="multiplication_sign">x</string>
    <string name="division_sign">/</string>
    <string name="equals_sign">=</string>
    <string name="plus_minus">+/-</string>
    <string name="all_clear">AC</string>
    <string name="decimal">.</string>
    <string name="square_root">Square Root</string>
    <string name="hyperbolic_tangent">tanh (Deg)</string>
    <string name="sine">sin (Deg)</string>
    <string name="cosine">cos (Deg)</string>
    <string name="more_functions">More Functions</string>
</resources>
